<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Text0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="SmartCarRemoteControl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/Edit0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSendButtonClicked"
            android:text="Command" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radiooff" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioon" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_weight="0.19" >

        <Button
            android:id="@+id/btna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnr"
            android:layout_alignLeft="@+id/btnb"
            android:layout_alignParentTop="true"
            android:text="@string/btnadvance" />

        <Button
            android:id="@+id/btnr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnb"
            android:layout_toRightOf="@+id/btnb"
            android:text="@string/btnright" />

        <Button
            android:id="@+id/btnb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/btnback" />

        <Button
            android:id="@+id/btnl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btna"
            android:layout_toRightOf="@+id/btnbz"
            android:text="@string/btnleft" />

        <Button
            android:id="@+id/btns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btnr"
            android:text="@string/btnstop" />

        <Button
            android:id="@+id/btnxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btns"
            android:layout_alignLeft="@+id/btns"
            android:layout_alignParentRight="true"
            android:text="@string/btnxunxian" />

        <Button
            android:id="@+id/btnbz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btna"
            android:text="@string/btnbizhang" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_weight="0.00"
        android:orientation="vertical" >

        <com.google.ads.AdView
            android:id="@+id/adview5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="a151ab69a3db6c1"
            ads:loadAdOnCreate="true"
            android:gravity="center" >
        </com.google.ads.AdView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <Button
        android:id="@+id/Button06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onQuitButtonClicked"
        android:text="Quit" />

</LinearLayout>